objects/Service__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates that the service is either active or inactive.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premium_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if the service is a premium service.</description>
        <label>Premium Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <description>Ranking is used to sort the list of services when displaying them to a user. Lowest ranking is displayed first.</description>
        <label>Ranking</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Routing_Service_Group__c</fullName>
        <description>Type of service. Indicates that the service is either a normal service, premium service or Saturday delivery service.</description>
        <label>Routing Service Group</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Saturday_Collection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if service is a Saturday service collection.</description>
        <label>Saturday Collection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Saturday_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if the service is a Saturday service.</description>
        <label>Saturday Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique code of the Service.</description>
        <externalId>true</externalId>
        <label>Service Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Service_Days__c</fullName>
        <description>Delivery timescales for the consignment (in days).</description>
        <label>Service Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Hour__c</fullName>
        <description>Service latest delivery hour.</description>
        <label>Service Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Minutes__c</fullName>
        <description>Service latest delivery minutes.</description>
        <label>Service Minutes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Time__c</fullName>
        <label>Service Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Service</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Service_Code__c</columns>
        <columns>Active__c</columns>
        <columns>Premium_Service__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>